--- a/mean/src/app/header/header.component.scss
+++ b/mean/src/app/header/header.component.scss
@@ -1,37 +1,49 @@
 header {
-    width: 100%;
-    .logo {
-      background-image: url('../../assets/logo.png');
-      width: 50px;
-      height: 50px;
-      background-size: contain;
-      background-repeat: no-repeat;
-    }
-    .example-spacer {
-      flex: 1 1 auto;
-    }
-    .links {
-      color: white;
-      font-family: 'Helvetica Neue', sans-serif;
-      font-size: 15px;
-      font-weight: initial;
-      letter-spacing: -1px;
-      line-height: 1;
-      text-align: center;
-      padding: 15px;
-      &.side {
-        padding: 0 14px;
-      }
-    }
-    .mat-toolbar {
-      background: black;
-    }
-    .mat-icon {
-      vertical-align: middle;
-      margin: 0 5px;
-    }
-    a {
-      cursor: pointer;
+  width: 100%;
+
+  
+  .logo {
+    // width: 550px;
+    // height: 50px;
+  }
+  .example-spacer {
+    flex: 1 1 auto;
+  }
+  .links {
+    @import url('https://fonts.googleapis.com/css2?family=Turret+Road:wght@700&display=swap');
+    color: white;
+    // font-family: 'Helvetica Neue', sans-serif;
+    font-family: 'Turret Road', cursive;
+    font-size: 15px;
+    // font-weight: initial;
+    font-size: unset;
+
+    letter-spacing: -1px;
+    line-height: 1;
+    text-align: center;
+    padding: 15px;
+    &.side {
+      padding: 0 14px;
     }
   }
- 
+  .mat-toolbar {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .mat-icon {
+    vertical-align: middle;
+    margin: 0 5px;
+  }
+  a {
+    cursor: pointer;
+  }
+}
+.fas {
+margin-right: 7px;
+}
+.logos {
+width: 110px;
+height: 50px;
+border-radius: 100px;
+}
