--- a/mean/src/app/createpostpage/createpostpage.component.html
+++ b/mean/src/app/createpostpage/createpostpage.component.html
@@ -1,1 +1,26 @@
-<p>create_post_page works!</p>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+<div class="body">
+<div>
+    <div style="text-align: center;">
+        <img [src]="_d.bypassSecurityTrustUrl(imgsrc)" alt="" style="border-radius: 8px;">
+    </div>
+    <div style="margin-left: 600px">
+        <input type="file" name="image" (change)="selectImage($event)" />
+    </div>
+    <div style="text-align: center; margin: 0px 100px">
+        <div class="form-group">
+            <label for="exampleFormControlInput1"><h4>ชื่อเรื่อง</h4></label>
+            <input type="text" class="form-control" #title>
+        </div>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1"><h4>เรื่องย่อ</h4></label>
+            <textarea class="form-control" rows="8" #detail></textarea>
+        </div>
+        <button type="button" class="btn btn-primary" (click)="onSubmit(title.value, detail.value)">Post</button>
+    </div><br><br><br><br>
+</div>
+
+</div>
