--- a/mean/src/app/header/header.component.html
+++ b/mean/src/app/header/header.component.html
@@ -1,8 +1,19 @@
-<header>
-  <mat-toolbar color="primary">
-    <a routerLink="/" class="logo"></a>
+<!-- CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+<!-- jQuery and JS bundle w/ Popper.js -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+
+<header class="bg-dark">
+  <mat-toolbar class="bg-dark">
+    <a routerLink="/"><img  src="../../assets/img/Novel_Share(1).png" alt="" style="width: 50px; height: 50px;"></a>
     <span class="example-spacer"></span>
-    <a class="links side" routerLink="/auth/login" *ngIf="!user">Login</a>
+    <a class="links side" routerLink="/"><i class="fas fa-home"></i>Home</a>
+    <a class="links side" routerLink="/Editprofile"><i class="fas fa-address-card"></i>Profile</a>
+
+    <a class="links side" routerLink="/auth/login" *ngIf="!user"><i class="fas fa-sign-in-alt"></i>Login</a>
     <div>
       <a class="links side" *ngIf="user" [matMenuTriggerFor]="menu">
         <mat-icon>account_circle</mat-icon>{{ user.fullname }}
@@ -13,4 +24,9 @@
       </mat-menu>
     </div>
   </mat-toolbar>
+
 </header>
+
+
+
+
